  when the opt target is built but opt.opt target is not.
  (whitequark)

### Internal/compiler-libs changes:

- GPR#744, GPR#781: fix duplicate self-reference in imported cmi_crcs
  list in .cmti files + avoid rebuilding cmi_info record when creating
  .cmti files
  (Alain Frisch, report by Daniel Bunzli, review by Jeremie Dimino)

### Bug fixes

- PR#7414/GPR#929: Soundness bug with non-generalized type variable and functors
  (Jacques Garrigue, report by Leo White)

- PR#7421: Soundness bug with GADTs and lazy
  (Jacques Garrigue, report by Leo White)

- PR#7424: Typechecker diverges on unboxed type declaration
  (Jacques Garrigue, report by Stephen Dolan)

- GPR#795: remove 256-character limitation on Sys.executable_name
  (Xavier Leroy)

- GPR#814: fix the Buffer.add_substring bounds check to handle overflow
  (Jeremy Yallop)

- GPR#810: check for integer overflow in Array.concat
  (Jeremy Yallop)

- GPR#805, GPR#815, GPR#833: check for integer overflow in String.concat
  (Jeremy Yallop,
   review by Damien Doligez, Alain Frisch, Daniel Bünzli, Fabrice Le Fessant)

- PR#7427, GPR#959: Don't delete let bodies in Cmmgen (Mark Shinwell)

- GPR#956 Keep possibly-effectful expressions when optimizing multiplication
  by zero.
  (Jeremy Yallop)

Next minor version (4.04.1):
----------------------------

### Standard library:

- PR#7403, GPR#894: fix a bug in Set.map as introduced in 4.04.0
  (Gabriel Scherer, report by Thomas Leonard)

### Bug fixes

- PR#7405, GPR#903: s390x: Fix address of caml_raise_exn in native dynlink modules
  (Richard Jones, review by Xavier Leroy)

- MPR#7417, GPR#930: ensure 16 byte stack alignment inside caml_allocN on x86-64
  for ocaml build with WITH_FRAME_POINTERS defined
  (Christoph Cullmann)

- GPR#912: Fix segfault in Unix.create_process on Windows caused by wrong header
  configuration.
  (David Allsopp)

OCaml 4.04.0 (4 Nov 2016):
--------------------------

(Changes that can break existing programs are marked with a "*")
